Feat: https 켜기, http -> https Redirection

--- a/default.conf
+++ b/default.conf
@@ -1,13 +1,22 @@
 server {
     listen 80;
     server_name localhost;
+        
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
 
+server {
+    listen 443 ssl;
+    server_name localhost;
     root /var/www/html;
     index index.html;
 
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    ssl_certificate_key /etc/ssl/localhost.dev.key;
+    ssl_certificate /etc/ssl/localhost.dev.crt;
 
+    
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_pass was:9000;
@@ -15,5 +24,9 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
