--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - 443:443
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl:/etc/ssl
       - ./src:/var/www/html
     depends_on:
       - was
