Revise: 바뀐 폴더구조에 따라 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./default.conf:/etc/nginx/conf.d/default.conf
-      - ./ssl:/etc/ssl
-      - ./src:/var/www/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/ssl:/etc/ssl
+      - ./app/src:/var/www/html
     depends_on:
       - was
 
@@ -17,7 +17,7 @@ services:
     ports:
       - 9000:9000
     volumes:
-      - ./src:/var/www/html
+      - ./app/src:/var/www/html
     depends_on:
       - db
 
