--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,7 +11,7 @@ server {
     listen 443 ssl;
     server_name localhost;
     root /var/www/html;
-    index index.php;
+    index index.html index.php;
 
     ssl_certificate_key /etc/ssl/localhost.dev.key;
     ssl_certificate /etc/ssl/localhost.dev.crt;
